--- a/index.html
+++ b/index.html
@@ -1,6 +1,38 @@
-<h1>Welcome to My Website!</h1>
-<!-- Add an image of yourself that links to the about page -->
-<a href = "public/about.html"><img src = "assets/images/cat.png" /></a>
-<hr />
-<!-- Add a link to your contact me page here -->
-<a href = "./public/contact.html">Contact me</a>
+<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Iqbal's Web Development Profile</title>
+</head>
+<body>
+   <h1>Iqbal Shahid</h1> 
+   <h2>Web Developer</h2>
+   <hr/>
+   <a href="movie-ranking.html"> <h2>Movie Ranking Project</h2></a>
+   <br/>
+   <img src = "./assets/images/movieRankingIqbal.png" width = "400">
+    <br/>
+    <a href="birthday-invite.html"><h2>Birthday Invite Project</h2></a>
+    <br/>
+   <img src = "./assets/images/birthdayInviteIqbal.png" width = "400">
+   <hr/>
+   <a href="./public/contact.html">Contact</a>
+   <a href="./public/about.html">About Me</a>
+</body>
+</html>
+<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+
+<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+
+<!-- TODO 4: Add titles/subtitles etc. -->
+
+<!-- TODO 5: Add a link to the project pages -->
+
+<!-- TODO 6: Add images to show the project previews
+HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
+https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
+
+<!-- TODO 7: Add the Contact Me and About Me page links -->
